update for 2025 Mar 28 Tokyo Hacker House

--- a/.github/workflows/update-badge.yml
+++ b/.github/workflows/update-badge.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           label: 'Contract Test Coverage'
           status: ${{ steps.contract-coverage.outputs.coverage }}
-          color: ${{ steps.storage-contract-coverage.outputs.color }}
+          color: ${{ steps.contract-coverage.outputs.color }}
           path: .github/badges/coverage.svg
 
       - name: Generate sui version value
